--- a/Quiz/styles.css
+++ b/Quiz/styles.css
@@ -4,16 +4,14 @@ body {
   background: #5f1c1c;
   font-family: "Roboto", sans-serif;
 }
-
 .dojo {
-  background: url(https://gists.rawgit.com/alexmwalker/6acbe9040d9fe6e5e9fd758a25e1b2a5/raw/9c8131eb2ccc1e3839a5a5114cb16b5dc74daf04/dojo.svg);
-  background-repeat: no-repeat;
+  background: url(https://cdn.rawgit.com/alexmwalker/6acbe9040d9fe6e5e9fd758a25e1b2a5/raw/9c8131eb2ccc1e3839a5a5114cb16b5dc74daf04/dojo.svg)
+    no-repeat;
   width: 100%;
   height: 800px;
   background-size: 100% auto;
   padding-top: 10px;
 }
-
 .quiz-body {
   background: rgba(255, 255, 255, 1);
   margin: 150px 33%;
@@ -22,7 +20,6 @@ body {
   -moz-box-shadow: 4px 4px 11px 3px rgba(0, 0, 0, 0.3);
   box-shadow: 4px 4px 11px 3px rgba(0, 0, 0, 0.3);
 }
-
 h1 {
   color: #611bbd;
   font-family: "Baloo Da", cursive;
@@ -31,7 +28,6 @@ h1 {
   font-size: 48px;
   margin: 0;
 }
-
 button {
   color: #ffffff;
   background-color: #611bbd;
@@ -42,7 +38,6 @@ button {
   width: 100%;
   font-size: 24px;
 }
-
 #question {
   font-size: 24px;
 }
@@ -53,11 +48,9 @@ button {
   width: 100%;
   text-align: center;
 }
-
 .correct {
   background-color: #0c0;
 }
-
 .wrong {
   color: #fff;
   background-color: #c00;
